Updated Description  in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
+title: Harish Kulkarni
 logo: /assets/img/Harish_Kulkarni.jpg
-description: Minimal is a theme for GitHub Pages.
+description: Searching through the life.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
