Update disabled downloads _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Harish Kulkarni
 logo: /assets/img/Harish_Kulkarni.jpg
 description: Searching through the life.
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
